maud/tests/warnings/dynamic-attribute-names.rs
use maud::html;

fn main() {
    let name = "href";
    html! {
        a (name)="about:blank" {}
    };
}
